sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:14: error: not found: value din
		for(i<-din to deb by -1){
                       ^